--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=test
 server.port=8081
 
-config.scheduler.fixed-rate=60000
-config.scheduler.initial-delay=5000
-
 config.heartbeat-queue.type=sqs
 config.heartbeat-queue.url=<sqs-url>
-
-config.server-type=ec2
+config.scheduler.fixed-rate=60000
+config.scheduler.initial-delay=5000
+config.server-type=localhost
